--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,15 @@
         font-family: 'Poppins', sans-serif;
     }
 }
+
+
+/* Default Light Theme */ 
+body.light-theme { 
+    /* background-color: white;  */
+    color: black; 
+    } 
+    /* Dark Mode */ 
+    body.dark-theme { 
+    background-color: black; 
+    color: white; 
+    }
